--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 aside .active{
-    color: #FCD34D;
+    color: #64080c;
 }
  .active {
-    color:#3E8E7E	;
+    color:#E50914;
 }
